# fbthrift

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
jmtest/server/: run.sh  server.py
jmtest/thrift-py/: CMakeLists.txt  setup.py
jmtest/thrift-py/client/: TestClient.cpp
thrift/cmake/: FBThriftConfig.cmake.in
thrift/lib/: CMakeLists.txt  setup.py
thrift/lib/cpp2/: CMakeLists.txt
thrift/lib/py3/: CMakeLists.txt
